Gateway/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gate
  labels:
    app: gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gate
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: gate
    spec:
      containers:
      - name: gate
        image: romeo7/trim_gate
