Gateway/manifests/gatedeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gate
spec:
  selector:
    matchLabels:
      app: gate
  template:
    metadata:
      labels:
        app: gate
    spec:
      containers:
      - name: gate
        image: romeo7/trim_gate:v1
        ports:
        - containerPort: 8080
