Gateway/manifests/gateservice.yaml
kind: Service
apiVersion: v1
metadata:
  name:  gate
spec:
  selector:
    app:  gate
  type:  ClusterIP
  ports:
  - name:  gate-port
    port:  8080
    targetPort:  8080
