Gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  gate
spec:
  selector:
    app:  gate
  type:  ClusterIP
  ports:
  - port:  8080
    targetPort:  8080
    protocol: TCP
